examples/errors/return_missing.xpln
fun print(a)
    output a;
endf;

z:=print(33);
return 0;
